--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "build:ci": "ng build --prod --sourceMap=false --base-href /CuraHearts/"
+    "test:ci": "ng test --watch=false --code-coverage --source-map true"    
+    "lint": "ng lint",    
     "e2e": "ng e2e",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && ng serve -o"
   },
