--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build:ci": "ng build --prod --sourceMap=false --base-href /CuraHearts/",
-    "test:ci": "ng test --watch=false --code-coverage --source-map true",        
+    "test:ci": "ng test",        
     "lint": "ng lint",    
     "e2e": "ng e2e",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && ng serve -o"
