--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "material-dashboard-angular",
+  "name": "Cura Hearts",
   "version": "2.5.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build:ci": "ng build --prod --sourceMap=false --base-href /CuraHearts/",
-    "test:ci": "ng test --watch=false --code-coverage=false",        
+    "build": "ng build",
+    "test": "ng test,        
     "lint": "ng lint",    
     "e2e": "ng e2e",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && ng serve -o"
