--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",        
+   "build:ci": "ng build --prod --sourceMap=false --base-href /CuraHearts/",
+    "test:ci": "ng test --watch=false",    
     "lint": "ng lint",    
     "e2e": "ng e2e",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && ng serve -o"
